# Neural-Memex

./: LICENSE  README.md  main.py  pyproject.toml  success_log.txt
src/: cli.py  ingestion.py  processing.py  server.py
src/core/: config.py
src/db/: db_client.py
src/services/: indexer.py  watcher.py
systemd/: neural-memex.service
