[project]
name = "neural-memex"
version = "0.1.0"
description = "A local semantic file system daemon."
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "typer[all]",
    "rich",
    "watchdog",
    "chromadb",
    "sentence-transformers",
    "pydantic-settings",
    "asyncio",
    "pypdf",
    "fastapi",
    "uvicorn",
    "httpx",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.yapf]
based_on_style = "google"
